# swordcloud

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: generate_from_frequencies.py  generate_kmeans_cloud.py  recolor.py  sample.py  wc_plot_tsne_sample-2.ipynb  word_frequencies.tsv
src/swordcloud/: __init__.py  color_func.py  occupancy.py  processing.py  tokenization.py  wordcloud.py
swordcloud/: __init__.py  processing.py  thstopwords  wordcloud.py
swordcloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swordcloud/example/: sample.py  wc_plot_tsne_sample-2.ipynb
test/: test_wordcloud.py
